src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "Outfit";
    src: local("Outfit-Regular"), url("./assets/fonts/Outfit-Regular.ttf");
}
@font-face {
    font-family: "Outfit";
    src: local("Outfit-Bold"), url("./assets/fonts/Outfit-Bold.ttf");
}

@layer base {
    :root {
        --background: 0 0% 100%;
        --foreground: 224 71.4% 4.1%;
        --card: 0 0% 100%;
        --card-foreground: 224 71.4% 4.1%;
        --popover: 0 0% 100%;
        --popover-foreground: 224 71.4% 4.1%;
        --primary: 276, 35%, 65%;
        --primary-foreground: 210 20% 98%;
        --secondary: 276, 35%, 50%;
        --secondary-foreground: 220.9 39.3% 11%;
        --muted: 220 14.3% 95.9%;
        --muted-foreground: 220 8.9% 46.1%;
        --accent: 276, 35%, 65%;
        --accent-foreground: 220.9 39.3% 11%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 210 20% 98%;
        --border: 220 13% 91%;
        --input: 220 13% 91%;
        --ring: 276, 35%, 50%;
        --radius: 0.5rem;
        --chart-1: 12 76% 61%;
        --chart-2: 173 58% 39%;
        --chart-3: 197 37% 24%;
        --chart-4: 43 74% 66%;
        --chart-5: 27 87% 67%;
        --modal: 229, 41%, 63%;
    }

    .dark {
        --background: 0, 0%, 0%;
        --foreground: 210 20% 98%;
        --card: 224 71.4% 4.1%;
        --card-foreground: 210 20% 98%;
        --popover: 224 71.4% 4.1%;
        --popover-foreground: 210 20% 98%;
        --primary: 244 51% 64%;
        --primary-foreground: 220.9 39.3% 11%;
        --secondary: 215 27.9% 19%;
        --secondary-foreground: 210 20% 98%;
        --muted: 215 27.9% 16.9%;
        --muted-foreground: 217.9 10.6% 64.9%;
        --accent: 215 27.9% 16.9%;
        --accent-foreground: 210 20% 98%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 210 20% 98%;
        --border: 227 46% 77%;
        --input: 227 46% 77%;
        --ring: 276, 35%, 50%;
        --chart-1: 220 70% 50%;
        --chart-2: 160 60% 45%;
        --chart-3: 30 80% 55%;
        --chart-4: 280 65% 60%;
        --chart-5: 340 75% 55%;
        --modal: 208, 41%, 26%;
    }
}

.transition-opacity {
    transition: opacity 0.5s ease-in-out;
}

@layer base {
    * {
        @apply border-border;
    }
    body {
        @apply bg-background text-foreground;
        font-family: Outfit, sans-serif;
    }
}

